==> ZhouHr/pico-nfrc522/lib/MFRC522/MFRC522.c <==
#include "MFRC522.h"
#include "string.h"
#include "hardware/gpio.h"
#include "hardware/spi.h"
#define MAXRLEN 18

unsigned char ReadRawRC(unsigned char addr)
{
    unsigned char i, ucaddr;
    unsigned char ucResult = 0;

    gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET); // 将CLK拉低
    gpio_put(mfrc522_pin_cs, GPIO_PIN_RESET);  // 将CSS拉低
    /*地址处理：bit7读写位(1读/0写)，bit6~bit1地址，bit0必须为0*/
    ucaddr = ((addr << 1) & 0x7e) | 0x80;

    /*发送寄存器地址*/
    for (i = 8; i > 0; i--)
    {
        if (ucaddr & 0x80) // 通过判断地址MSB的值，将PB15置0或置1
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_SET);
        }
        else
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_RESET);
        }
        /*CLK跳变：完成1个bit的发送*/
        gpio_put(mfrc522_pin_sck, GPIO_PIN_SET);
        ucaddr <<= 1; // 地址左移1位后，继续判断MSB的值
        gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET);
    }

    /*读取寄存器返回的值*/
    for (i = 8; i > 0; i--)
    {
        /*CLK跳变：完成1个bit的读取*/
        gpio_put(mfrc522_pin_sck, GPIO_PIN_SET);
        ucResult <<= 1; // 左移一位，空出LSB位存放下一位读取值
        ucResult |= gpio_get(mfrc522_pin_miso);
        gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET);
    }

    gpio_put(mfrc522_pin_sck, GPIO_PIN_SET); // 将CLK拉高
    gpio_put(mfrc522_pin_cs, GPIO_PIN_SET);  // 将CSS拉高
    sleep_ms(10);
    return ucResult;
}

void WriteRawRC(unsigned char addr, unsigned char val)
{
    unsigned char i, ucaddr;
    gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET); // 将CLK拉低
    gpio_put(mfrc522_pin_cs, GPIO_PIN_RESET);  // 将CSS拉低
    /*地址处理：bit7读写位(1读/0写)，bit6~bit1地址，bit0必须为0*/
    ucaddr = ((addr << 1) & 0x7e);

    /*发送寄存器地址*/
    for (i = 8; i > 0; i--)
    {
        if (ucaddr & 0x80) // 通过判断地址MSB的值，将PB15置0或置1
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_SET);
        }
        else
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_RESET);
        }
        /*CLK跳变：完成1个bit的发送*/
        gpio_put(mfrc522_pin_sck, GPIO_PIN_SET);
        ucaddr <<= 1; // 地址左移1位后，继续判断MSB的值
        gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET);
    }

    /*发送要写入的数值*/
    for (i = 8; i > 0; i--)
    {
        if (val & 0x80) // 通过判断写入值MSB的值，将PB15置0或置1
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_SET);
        }
        else
        {
            gpio_put(mfrc522_pin_miso, GPIO_PIN_RESET);
        }
        /*CLK跳变：完成1个bit的发送*/
        gpio_put(mfrc522_pin_sck, GPIO_PIN_SET);
        val <<= 1; // val左移1位后，继续判断MSB的值
        gpio_put(mfrc522_pin_sck, GPIO_PIN_RESET);
    }

    gpio_put(mfrc522_pin_sck, GPIO_PIN_SET); // 将CLK拉高
    gpio_put(mfrc522_pin_cs, GPIO_PIN_SET);  // 将CSS拉高
    sleep_ms(10);
}

char PcdReset(void)
{
    MFRC522_Reset(); // 使用硬件复位
    WriteRawRC(CommandReg, PCD_RESETPHASE);
    sleep_ms(10);
    WriteRawRC(ModeReg, 0x3d);
    sleep_ms(10);
    WriteRawRC(TReloadRegL, 30);
    WriteRawRC(TReloadRegH, 0);
    WriteRawRC(TModeReg, 0x8d);
    WriteRawRC(TPrescalerReg, 0x3e);
    WriteRawRC(TxAskReg, 0x40);

    return MI_OK;
}

char PcdComMF522(unsigned char Command, unsigned char *pInData,
                 unsigned char InLenByte, unsigned char *pOutData, unsigned int *pOutLenBit)
{
    char status = MI_ERR;
    unsigned char irqEn = 0x00;
    unsigned char waitFor = 0x00;
    unsigned char lastBits;
    unsigned char n;
    unsigned int i;
    switch (Command)
    {
    case PCD_AUTHENT:   // 0x0E  验证密钥
        irqEn = 0x12;   // 0001 0010
        waitFor = 0x10; // 0001 0000
        break;
    case PCD_TRANSCEIVE: // 0x0C  发送并接收数据
        irqEn = 0x77;    // 0111 0111
        waitFor = 0x30;  // 0011 0000
        break;
    default:
        break;
    }

    WriteRawRC(ComIEnReg, irqEn | 0x80); // 使能相应中断
    ClearBitMask(ComIrqReg, 0x80);       // 清零所有中断标志
    WriteRawRC(CommandReg, PCD_IDLE);    // 命令寄存器复零
    SetBitMask(FIFOLevelReg, 0x80);      // 复位FIFO读写指针

    /*把要发送给卡的数据写入522的FIFO数据寄存器*/
    for (i = 0; i < InLenByte; i++)
    {
        WriteRawRC(FIFODataReg, pInData[i]);
    }
    /*RC522执行发送命令*/
    WriteRawRC(CommandReg, Command);

    /*若执行的是发送数据命令*/
    if (Command == PCD_TRANSCEIVE)
    {
        SetBitMask(BitFramingReg, 0x80); // 启动传输
    }

    // 退出do-while循环的IRQ条件:
    // 1.i=0
    // 2.定时器减到零中断
    // 3.接收器检测到有效的数据中断OR命令本身终止中断
    i = 500; // 根据时钟频率调整，操作M1卡最大等待时间25ms
    do
    {
        n = ReadRawRC(ComIrqReg); // 读中断标志寄存器
        i--;
    } while ((i != 0) && !(n & 0x01) && !(n & waitFor));

    ClearBitMask(BitFramingReg, 0x80); // 结束发送数据命令

    if (i != 0) // 射频区无卡
    {
        // 读错误标志寄存器&0001 1011不是以下错误：
        // 数据FIFO已满、碰撞错误、奇偶校验错误、SOF错误
        if (!(ReadRawRC(ErrorReg) & 0x1B))
        {
            status = MI_OK;       // 暂时无错误
            if (n & irqEn & 0x01) // 是否为定时器中断
            {
                status = MI_NOTAGERR;
            } // 错误

            if (Command == PCD_TRANSCEIVE)
            {
                n = ReadRawRC(FIFOLevelReg); // 共接收了几个字节
                // 接收的最后一个字节的有效位
                lastBits = ReadRawRC(ControlReg) & 0x07;
                if (lastBits)
                {
                    *pOutLenBit = (n - 1) * 8 + lastBits;
                } // N*8+LASTBITS位
                else
                {
                    *pOutLenBit = n * 8;
                } // N*8位

                if (n == 0)
                {
                    n = 1;
                }

                if (n > MAXRLEN)
                {
                    n = MAXRLEN;
                } // 最多可接收18个字节
                for (i = 0; i < n; i++)
                {
                    pOutData[i] = ReadRawRC(FIFODataReg);
                } // 取出接收到的数据放到数组POUTDATA
            }
        }
        else
        {
            status = MI_ERR;
        } // 错误标志
    }

    SetBitMask(ControlReg, 0x80);     // 停止定时器
    WriteRawRC(CommandReg, PCD_IDLE); // 复位COMMANDREG
    return status;
}

char PcdRequest(unsigned char req_code, unsigned char *pTagType)
{
    char status;
    unsigned int unLen;
    unsigned char ucComMF522Buf[MAXRLEN];

    ClearBitMask(Status2Reg, 0x08);  // 清零Status2Reg的MFAuthent Command执行成功标志位
    WriteRawRC(BitFramingReg, 0x07); // 清零Transceive命令开始位
    SetBitMask(TxControlReg, 0x03);  // 开启天线
    ucComMF522Buf[0] = req_code;     // 取522要执行的命令
    // 向PICC发送寻天线区内全部卡命令，并接收PICC返回的数据
    status = PcdComMF522(PCD_TRANSCEIVE, ucComMF522Buf, 1, ucComMF522Buf, &unLen);

    if ((status == MI_OK) && (unLen == 0x10)) // 没有错误并接接收为2个字节
    {
        *pTagType = ucComMF522Buf[0];       // 取接收缓冲区的第一个字节
        *(pTagType + 1) = ucComMF522Buf[1]; // 取接收缓冲区的第二个字节
    }
    else
    {
        status = MI_ERR;
    } // 错误

    return status;
}

char PcdAnticoll(unsigned char *pSnr)
{
    char status;
    unsigned char i, snr_check = 0;
    unsigned int unLen;
    unsigned char ucComMF522Buf[MAXRLEN];

    ClearBitMask(Status2Reg, 0x08);    // 清除标志位
    WriteRawRC(BitFramingReg, 0x00);   // 000 指示最后一个字节的所有位将被发送。
    ClearBitMask(CollReg, 0x80);       // 发生碰撞所有接收位将被清除
    ucComMF522Buf[0] = PICC_ANTICOLL1; // 0x93 防冲撞 发到卡里的命令
    ucComMF522Buf[1] = 0x20;
    // 获得卡的序列号，ucComMF522Buf[]
    status = PcdComMF522(PCD_TRANSCEIVE, ucComMF522Buf, 2, ucComMF522Buf, &unLen);
    if (status == MI_OK)
    {
        for (i = 0; i < 4; i++)
        {
            *(pSnr + i) = ucComMF522Buf[i]; // 返回卡的序列号
            snr_check ^= ucComMF522Buf[i];  // 计算校验码
        }
        if (snr_check != ucComMF522Buf[i])
        {
            status = MI_ERR;
        } // 有错误
    }

    SetBitMask(CollReg, 0x80); // 置位防碰撞位
    return status;
}

char PcdSelect(unsigned char *pSnr)
{
    char status = 0XFF;
    unsigned char i;
    unsigned int unLen;
    unsigned char ucComMF522Buf[MAXRLEN]; // MAXRLEN = 18

    ucComMF522Buf[0] = PICC_ANTICOLL1; // 防冲撞命令
    ucComMF522Buf[1] = 0x70;
    ucComMF522Buf[6] = 0;
    for (i = 0; i < 4; i++)
    {
        ucComMF522Buf[i + 2] = *(pSnr + i); // 填充卡的序列号
        ucComMF522Buf[6] ^= *(pSnr + i);    // 计算校验码
    }
    CalulateCRC(ucComMF522Buf, 7, &ucComMF522Buf[7]); // 获得CRC校验结果的16位值
                                                      // 放入ucComMF522Buf【0，1】
    ClearBitMask(Status2Reg, 0x08);                   // 清零MFAuthent Command执行成功标志位
    // 把CRC值和卡号发的卡里
    status = PcdComMF522(PCD_TRANSCEIVE, ucComMF522Buf, 9, ucComMF522Buf, &unLen);

    if ((status == MI_OK) && (unLen == 0x18)) // 返回24个字节&状态为无错误
    {
        status = MI_OK;
    }
    else
    {
        status = MI_ERR;
    }

    return status;
}

char PcdAuthState(unsigned char auth_mode, unsigned char addr, unsigned char *pKey, unsigned char *pSnr)
{
    char status;
    unsigned int unLen;
    unsigned char i, ucComMF522Buf[MAXRLEN];

    ucComMF522Buf[0] = auth_mode; // PICC验证A密钥指令
    ucComMF522Buf[1] = addr;      // 块地址
    for (i = 0; i < 6; i++)
    {
        ucComMF522Buf[i + 2] = *(pKey + i);
    } // 向缓冲区填充密码
    for (i = 0; i < 6; i++)
    {
        ucComMF522Buf[i + 8] = *(pSnr + i);
    } // 向缓冲区填充与密码对应的卡的序列号，有效4个字节

    status = PcdComMF522(PCD_AUTHENT, ucComMF522Buf, 12, ucComMF522Buf, &unLen); // 验证密码和卡号
    if ((status != MI_OK) || (!(ReadRawRC(Status2Reg) & 0x08)))                  // 密码验证是否成功
    {
        status = MI_ERR;
    }

    return status;
}
